<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/textView1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/entry_manual_string"
        android:textSize="20sp">
    </TextView>
    <TextView
        android:id="@+id/textView2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@id/textView1"
        android:text="@string/entry_warning_string"
        android:textSize="15sp"
        android:layout_marginTop="40dip">
    </TextView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_alignParentBottom = "true">
        <Button
            android:id="@+id/btnEntryNG"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/left"
            android:text="@string/entryNoUseString" />
        <Button
            android:id="@+id/btnEntryOK"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableRight="@drawable/right"
            android:text="@string/entryUseString" />
    </LinearLayout>
</RelativeLayout>
