<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/mainTextView1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/main_activity_bodystring"
        android:textSize="18sp">
    </TextView>
    <TextView
        android:id="@+id/mainAuthStateText"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/main_activity_authwill"
        android:textSize="18sp">
    </TextView>
        <TextView
        android:id="@+id/mainTextView2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@id/mainTextView1"
        android:text="@string/main_activity_manual"
        android:textSize="15sp"
        android:layout_marginTop="40dip">
    </TextView>
        
    <Button
        android:id="@+id/btnTmpSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="仮送信" />
</LinearLayout>
